# hello_wasm

./: .gitignore  CMakeLists.txt  Cargo.toml  add.wat  index.html  main.c  side.c
